--- a/themes/flatcar/assets/scss/sections/section-product.scss
+++ b/themes/flatcar/assets/scss/sections/section-product.scss
@@ -902,7 +902,7 @@
       height: 100%;
 
       &:hover {
-        color: $flatcar-darker-blue;
+        color: var(--flatcar-accent);
         text-decoration: none;
       }
 
@@ -932,7 +932,7 @@
 
       &:hover {
         background-color: rgba($flatcar-blue, 0.15);
-        color: $flatcar-darker-blue;
+        color: var(--flatcar-accent);
       }
 
       &:focus-visible {
@@ -961,7 +961,7 @@
       font-weight: 700;
       text-transform: uppercase;
       letter-spacing: 0.04em;
-      color: $flatcar-darker-blue;
+      color: var(--flatcar-accent);
       background: rgba($flatcar-blue, 0.08);
       border-bottom-right-radius: 6px;
       border-top-left-radius: 7px;
@@ -1194,7 +1194,7 @@
         text-decoration: none;
 
         &:hover {
-          color: $flatcar-darker-blue;
+          color: var(--flatcar-accent);
         }
       }
 
